--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
+    "path": "^0.12.7",
     "twilio": "^4.17.0"
   },
   "devDependencies": {
